Fixed word wrap

--- a/css/mystylesheet.css
+++ b/css/mystylesheet.css
@@ -52,3 +52,7 @@ a:active
 {
     color: darkgrey;
 }
+.paragraph-desc
+{
+    width: 24em;
+}
